# ComfyUI-ZFRNodes

./: README.md  __init__.py  pyproject.toml
docs/models/flux2/image-to-image/: prompting_editing_multi_reference.md  prompting_editing_overview.md  prompting_editing_single_reference.md  prompting_unified_usecases.md
docs/models/flux2/text-to-image/: prompting_unified_basics.md  prompting_unified_building.md  prompting_unified_reference.md  prompting_unified_style.md  prompting_unified_technical.md  prompting_unified_usecases.md
docs/models/pony/image-to-image/: pony_i2i_guide.md
docs/models/pony/text-to-image/: pony_t2i_guide.md
docs/models/sd15/image-to-image/: sd15_i2i_guide.md
docs/models/sd15/text-to-image/: sd15_t2i_guide.md
docs/models/sdxl/image-to-image/: sdxl_i2i_guide.md
docs/models/sdxl/text-to-image/: sdxl_t2i_guide.md
docs/models/z-image/image-to-image/: zimage_turbo_i2i_guide.md
docs/models/z-image/text-to-image/: zimage_turbo_t2i_guide.md
py/: __init__.py  asset_sheet_director.py  clip_types.py  prompt_guide.py  reference_image_loader.py  sheet_compositor.py  simple_image_generator.py  simple_image_generator_multiple.py  story_director.py  story_frame_generator.py
web/: zfrnodes.js
workflows/: ZFRNodes-AssetPipeline.json  ZFRNodes-Assets-Sheets-Creator.json  ZFRNodes-Catalog-Creator.json  ZFRNodes-Catalog-Multiple-SFG.json  ZFRNodes-LLM-With-Multiple-image-Edit.json  ZFRNodes-Story-Director.json
