[project]
name = "comfyui-zfrnodes"
description = "Story / sequence image generation for ComfyUI: generate a whole consistent multi-frame story from one JSON prompt in a single node, plus single-image text-to-image / image-to-image and small JSON & type helpers."
version = "1.0.1"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/zfrsgtcu/ComfyUI-ZFRNodes"

[tool.comfy]
PublisherId = "zfrsgtcu"
DisplayName = "ComfyUI-ZFRNodes"
Icon = ""
